[package]
name = "pwmanager_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = {version = "*", features=["derive"]}
serde_json = "*"
pkcs5 = {version = "0.5.0", features=["alloc", "pbes2"]}
der = {version = "*", features=["alloc", "std"]}
tui = "*"
crossterm = "*"
clipboard = "*"
