[package]
name = "pwmanager_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
serde = {version = "*", features=["derive"]}
serde_json = "*"
ron = "0.8"
#pkcs5 = {version = "0.5.0", features=["alloc", "pbes2"]}
#der = {version = "*", features=["alloc", "std"]}
chacha20poly1305 = "0.10.1"
tui = "*"
crossterm = "*"
clipboard = "*"
argon2 = {version = "0.4.1"}
password-hash = {version = "0.4.2", features=["std"]}
